# prometheus

./: .env.example  .gitignore  AGENT_BEHAVIOR.md  AGENT_WORKFLOW_IMPROVEMENTS.md  API_KEYS_SETUP.md  BUG_FIXES.md  CLAUDE.md  CODE_QUALITY_PHASE2.md  CONTEXT_MANAGEMENT.md  DEBUGGING_GUIDE.md  DEPLOY_FIX.md  GREPTILE_FIXES.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  REACT_INTELLIGENCE.md  README.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  REFACTORING_SUCCESS.md  TESTING_GUIDE.md  WORKSPACE_CONFIG.md  docker-compose.yml  environment.example
.cursor/rules/: backend.mdc  frontend.mdc  global.mdc
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml  test_react_integration.py
backend/prometheus/: config.py  database.py  main.py
backend/prometheus/mcp/: tools.py
backend/prometheus/routers/: chat.py  conversations.py  files.py  git.py  health.py  index.py  mcp.py  permissions.py
backend/prometheus/services/: checkpoint_service.py  code_validator.py  codebase_index.py  context_manager.py  diagnostics_service.py  embeddings.py  failure_memory.py  git_service.py  github_service.py  incremental_builder.py  mcp_loader.py  model_router.py  parallel_executor.py  prompt_builder.py  react_executor.py  self_corrector.py  smart_editor.py  task_planner.py  todo_tracker.py  tool_registry.py  verification_loop.py  web_service.py
backend/tests/: test_checkpoint_service.py  test_code_validator.py  test_codebase_index.py  test_context_manager.py  test_diagnostics_service.py  test_failure_memory.py  test_health.py  test_parallel_executor.py  test_self_corrector.py  test_task_planner.py  test_todo_tracker.py
frontend/: Dockerfile  package-lock.json  package.json
(+27 files in other folders)
