[tool.poetry]
name = "prometheus-backend"
version = "0.1.0"
description = "Prometheus AI Agent IDE Backend"
authors = ["John Doe <john@example.com>"]
readme = "README.md"
packages = [{include = "prometheus"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
litellm = "^1.20.0"
python-dotenv = "^1.0.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
fastmcp = "^0.1.0"
structlog = "^24.1.0"
aiosqlite = "^0.19.0"
cryptography = "^42.0.0"
GitPython = "^3.1.40"
PyGithub = "^2.1.1"
nest-asyncio = "^1.6.0"
python-lsp-server = "^1.10.0"
httpx = "^0.27.0"
numpy = "^1.26.0"

[tool.poetry.extras]
local-models = ["sentence-transformers", "torch"]

[tool.poetry.dependencies.sentence-transformers]
version = "^2.5.1"
optional = true

[tool.poetry.dependencies.torch]
version = "^2.2.0"
source = "pytorch-cpu"
optional = true

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.5"
ruff = "^0.2.1"
black = "^24.1.1"
mypy = "^1.8.0"
hypothesis = "^6.98.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP", "PL", "TCH", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
